Uploading Updated File

--- a/en/core_l_english.properties
+++ b/en/core_l_english.properties
@@ -288,7 +288,7 @@ PEACE_TRANSFER_OTHERS_TRADE_POWER코0=Transfer $WHOS$ Trade Power
 PEACE_SHOW_STRENGTH코0=Show Strength
 PEACE_HUMILIATE코0=Humiliate
 INFLATION_DESC코0=Inflation may come from having too much gold income (in comparison to other income) or from taking loans.
-INLAND_SEA_DESC코0=This is an inland sea, Galleys will be more effective here, performing at a higher level in combat.
+INLAND_SEA_DESC코1=This is an inland sea, Galleys will be more effective here, doing 100% more damage in combat against other non-Galleys.
 SIEGE_ATTACKER_INFANTRY_DESC코0=The attacker has $NUM|Y$ infantry.
 SIEGE_ATTACKER_CAVALRY_DESC코0=The attacker has $NUM|Y$ cavalry.
 SIEGE_ATTACKER_ARTILLERY_DESC코0=The attacker has $NUM|Y$ artillery.
