--- a/en/emperor_l_english.properties
+++ b/en/emperor_l_english.properties
@@ -190,8 +190,8 @@ COUNCIL_STANCE_US_MAP코0=$POSITION$
 COUNCIL_STANCE_THEM_TITLE코0=$POSITION_HEAD$ in Council of Trent
 COUNCIL_STANCE_THEM_SETUP코0=When another nation change stance in the Council of Trent
 COUNCIL_STANCE_THEM_HEADER코0=Our Archbishop reports
-COUNCIL_STANCE_THEM_1코0=$WHO$ has changed their stance in the Council of Trent
-COUNCIL_STANCE_THEM_2코0=$POSITION$
+COUNCIL_STANCE_THEM_1코1=Stance Change in the Council of Trent
+COUNCIL_STANCE_THEM_2코1=$WHO$ has changed their $POSITION$ in the Council of Trent
 COUNCIL_STANCE_THEM_3코0=
 COUNCIL_STANCE_THEM_4코0=
 COUNCIL_STANCE_THEM_LOG코0=$WHO$ took $POSITION$ in Council of Trent.
@@ -326,7 +326,7 @@ ASSIGN_HEIR_NOT_WITH_FIXED_DYNASTY코0=This is not possible in a nation ruled by
 ASSIGN_HEIR_TITLE코0=Introduce New Heir
 ASSIGN_HEIR_DESC코0=Introducing a new heir will cost $PRESTIGE|Y$ prestige, and $LEGITIMACY|Y$ legitimacy! Are you sure?
 ASSIGN_HEIR_ALREADY_HEIR코0=You already have an heir.
-ASSIGN_HEIR_TT코0=§YIntroduce New Heir§!\nSpend $LEGITIMACY|Y$ legitimacy and $PRESTIGE|Y$ prestige to get a new heir!
+ASSIGN_HEIR_TT코1=§YIntroduce New Heir§!\nSpend $LEGITIMACY|Y$ Legitimacy and $PRESTIGE|Y$ Prestige to get a new heir!
 ASSIGN_HEIR_NOT_MONARCHY코0=Only monarchies can introduce new heirs!
 ASSIGN_HEIR_NOT_HEIRS코0=Your form of government does not have designated heirs!
 ASSIGN_HEIR_AT_WAR코0=You can not assign a new heir when at War!
@@ -1040,3 +1040,5 @@ EXPAND_EMPIRE_CB코0=Gives casus-belli on non-members bordering the Empire to fo
 force_peasant_republic_desc코0=[From.GetName] will become a peasant republic.
 CB_ALLOWED_force_peasant_republic코0=Enforce Peasant Rule
 PEACE_force_peasant_republic코0=Enforce Peasant Rule
+just_lost_war_timer코0=Just lost war
+
