--- a/en/emperor_estates_l_english.properties
+++ b/en/emperor_estates_l_english.properties
@@ -567,6 +567,7 @@ estate_dhimmi_build_temple_in_y코0=Build a Dhimmi House of Worship in [agenda_p
 estate_dhimmi_build_university_in_y코0=Sponsor Dhimmi Learning in [agenda_province.GetName]
 estate_dhimmi_stop_converting_province_x코0=Protect Minority Rights in [agenda_province.GetName]
 estate_dhimmi_increase_autonomy_in_province_x코0=Increase Autonomy in [agenda_province.GetName]
+estate_dhimmi_increase_autonomy_in_province_x_tooltip코0=[agenda_province.GetName]'s autonomy is reduced by more than 10
 estate_dhimmi_three_privileges코0=Extend Dhimmi Privileges
 estate_dhimmi_relations_with_X코0=Improve Relations with [agenda_country.GetUsableName]
 agenda_automatically_completed코0=This Agenda is automatically completed.
