Uploading Updated File

--- a/en/EU4_l_english.properties
+++ b/en/EU4_l_english.properties
@@ -1627,7 +1627,7 @@ EXPENSE_CORRUPTION코0=Root Out Corruption
 root_out_corruption코0=Rooting Out Corruption
 corruption코0=Corruption
 CORRUPTION_SLIDER_TOOLTIP코1=With this setting, we will pay up to §Y$PERDEV$§!¤ per §YDevelopment§! to combat §YCorruption§! each month. Currently, we pay §Y$COST$§!¤ monthly to reduce corruption by $ROOTOUT$ yearly, for a total yearly change of $CHANGE$.
-CORRUPTION_EXPLANATION코1=Corruption increases over time due to unbalanced research, overextension, lack of religious unity and having more territories than max states. It can be decreased by high stability and being ahead of time in administrative or diplomatic technology. If all else fails you can spend ducats to reduce corruption over time. Corruption can affect all power costs, minimum autonomy as well as spy defense and spy network construction speed.
+CORRUPTION_EXPLANATION코2=Corruption increases over time due to unbalanced research, overextension and lack of religious unity. It can be decreased by high stability and being ahead of time in administrative or diplomatic technology. If all else fails you can spend ducats to reduce corruption over time. Corruption can affect all power costs, minimum autonomy as well as spy defense and spy network construction speed.
 MERCANTILISM_LABEL코0=Mercantilism
 positive_piety코1=Legalism
 negative_piety코1=Mysticism
