Uploading Updated File

--- a/en/hedgehog_l_english.properties
+++ b/en/hedgehog_l_english.properties
@@ -76,7 +76,7 @@ tribe_organization코0=Tribe Organization
 story_tradition코0=Story Tradition
 legal_basis코0=Legal Basis
 national_identity코0=National Identity
-mechanic_enable_settled_mechanics_yes코0=Can settle development into tribl land
+mechanic_enable_settled_mechanics_yes코1=Can settle development into tribal land
 mechanic_enable_tribal_grazing_no코0=No longer graze on land causing devastation
 MIGRATORY_TRIBE_CULTURE_CONV코0=§RMigratory Tribes can't convert culture.§!
 vassal_overlord_title코0=Overlord
