--- a/en/mandala_missions_l_english.properties
+++ b/en/mandala_missions_l_english.properties
@@ -349,6 +349,7 @@ desc_maj_great_blockade코0=A colossal wooden wall shall completely block off th
 maj_religious_unity코0=Religious Peace
 desc_maj_religious_unity코0=We are striving for religious peace within our nation.
 is_buddhist_tt코0=Follows a §YBuddhist§! religion
+follows_buddha_tt코0=Follows the teachings of §YBuddha§!
 majapahit_cb_1_tt코0=Enables the §YMajapahit Campaigns§! casus belli against countries with a §YMalay§! primary culture
 majapahit_cb_2_tt코0=Enables the §YMajapahit Campaigns§! casus belli against countries in the §YChinese§! technology group
 majapahit_cb_3_tt코0=Enables the §YMajapahit Campaigns§! casus belli against §Yall countries§!
