--- a/en/nw2_l_english.properties
+++ b/en/nw2_l_english.properties
@@ -11,7 +11,7 @@ PUE_ideas코0=Pueblo Ideas
 PUE_ideas_start코0=Pueblo Traditions
 PUE_ideas_bonus코0=Pueblo Ambition
 ancient_pueblo_legacy코0=Ancient Pueblo Legacy
-ancient_pueblo_legacy_desc코0=For aeons already, our people have lived and built settlements in this region. We must neither abandon it, nor forget who we are.
+ancient_pueblo_legacy_desc코1=For aeons already, our people have lived and built settlements in this region. Our Elders have a rich story to tell.
 adobe_architecture코0=Adobe Architecture
 adobe_architecture_desc코0=By using dried mud as a building material, we can build strong, lasting settlements.
 mesa_settlements코0=Mesa Settlements
@@ -41,6 +41,7 @@ desc_tariffs_on_cocoa코0=Our motherland has tightened their grip on our economy
 aspiration_for_liberty코0=Aspiration for Liberty
 desc_aspiration_for_liberty코0=The population's strive for liberty and the desire for enactment of enlightened ideals have spurred a revolution that seems all but unavoidable.
 PROV2025코0=South Georgia
+PROV_ADJ2025코0=Georgian
 HAVNT_NEW_DYNASTY코0=Haven't a new dynasty
 HAVE_NEW_DYNASTY코0=Have a new dynasty
 EV_WOMAN코0=woman
