--- a/en/government_l_english.properties
+++ b/en/government_l_english.properties
@@ -264,7 +264,7 @@ mechanic_maintain_dynasty_no코0=Does not have a fixed dynasty.
 mechanic_has_harem_yes코0=Ruler has a harem.
 mechanic_has_harem_no코0=Ruler does not have a harem.
 mechanic_has_pashas_yes코1=Can place Pashas & recruit Janissaries.
-mechanic_boost_income_yes코0=Enables Merchant Republic Mechanics.
+mechanic_boost_income_yes코1=Enables Merchant Republic Mechanics (Vassals transfer trade power to you, higher state governing cost, cheaper Trade Companies).
 mechanic_boost_income_no코0=Disables Merchant Republic Mechanics.
 mechanic_can_use_trade_post_yes코0=Can place Trade Posts.
 mechanic_can_use_trade_post_no코1=Cannot place Trade Posts.
