Uploading Updated File

--- a/en/policies_l_english.properties
+++ b/en/policies_l_english.properties
@@ -414,3 +414,5 @@ my_word_is_my_bond_policy코0=My Word Is My Bond
 desc_my_word_is_my_bond_policy코0=Our spy network knows the way in and out of our enemy castles, for they have seen them in god's supreme architecture. Some may call it infiltration, we call it vision.
 render_unto_caesar_policy코0=Render Unto Caesar
 desc_render_unto_caesar_policy코0=What god has given you, you must return to him; what we have given to others, they must return to us. Our expansion around the world is a gift of enlightenment.
+canoe_expertise_policy코0=Canoe Expertise
+desc_canoe_expertise_policy코0=Our people has a long history with canoes in the past and learned how to maneuver with them exceptionally well. Our sailors can transfer their canoe expertise onto the use of bigger ships too.
