--- a/en/tmm_l_english.properties
+++ b/en/tmm_l_english.properties
@@ -975,7 +975,7 @@ NO_TRADE_COMPANIES코0=No Trade Companies
 CURRENT_GURU코0=Current Guru
 NEXT_GURU코0=Next Guru
 CURRENT_GURU_DESC코0=Your country currently gets the following benefits from $NAME$:\n\n$EFFECTS$
-NEXT_GURU_DESC코0=When the current Guru retires, $NAME$ will step up to replace him.
+NEXT_GURU_DESC코1=When the current Guru retires, $NAME$ will step up to replace him. When he becomes Guru, your country will get the following benefits:\n\n$EFFECTS$
 PICK_TEACHING_DESC코0=Add a teaching to permanently affect your country at a cost of some Monarch points.
 IF_CONDITIONS_MET코0=If the following conditions are met:
 THEN_THIS코0=...then these effects will happen:
@@ -1032,6 +1032,126 @@ ENFORCE_PEACE_CANNOT_LEAGUE_WAR코0=You cannot enforce peace in a Religious Leag
 CANNOT_MOVE_ALREADY_IN_PROGRESS코0=The $GREATPROJECT|Y$ is already being moved to $PROVINCE|Y$
 CANNOT_EXTEND_REGENCY_TOO_FAR_IN_FUTURE코0=The Regency doesn't end until $DATE$, wait until there's less than a year to go.
 HAS_REFORM_ON_LEVEL코0=Has a level $LEVEL|Y$ Government Reform.\n
-HAS_NOT_REFORM_ON_LEVEL코0=Has a level $LEVEL|Y$ Government Reform.\n
+HAS_NOT_REFORM_ON_LEVEL코1=Has no level $LEVEL|Y$ Government Reform.\n
 CURRENT_GURU_IS코0=Current Guru is 
 CURRENT_GURU_IS_NOT코0=Current Guru is NOT 
+CHANGE_TRIBAL_OWNER_EFFECT코0=$WHO|Y$ takes $WHERE|Y$ as their Tribal Land.\n
+mechanic_enable_settled_mechanics_no코0=Cannot settle into tribal land
+mechanic_enable_tribal_grazing_yes코0=Can graze on land causing devastation
+PROVINCE197CATALAN코0=Rosselló
+PROVINCE208CATALAN코0=Lleó
+PROVINCE221CATALAN코0=Múrcia
+PROVINCE224CATALAN코0=Sibília
+PROVINCE225CATALAN코0=Còrdova
+PROVINCE366CATALAN코0=Gran Canària
+PROVINCE1745CATALAN코0=Cantàbria
+PROVINCE1747CATALAN코0=Càceres
+PROVINCE2755CATALAN코0=Sòria
+PROVINCE4546CATALAN코0=Màlaga
+PROVINCE4551CATALAN코0=Àvila
+PROVINCE4552CATALAN코0=Palència
+PROVINCE4788CATALAN코0=Plasència
+PROVINCE4789CATALAN코0=Segòvia
+PROVINCE14CATALAN코0=Fiònia
+PROVINCE50CATALAN코0=Berlín
+PROVINCE78CATALAN코0=Magúncia
+PROVINCE80CATALAN코0=Trèveris
+PROVINCE82CATALAN코0=Westfàlia
+PROVINCE85CATALAN코0=Colònia
+PROVINCE92CATALAN코0=Brussel·les
+PROVINCE101CATALAN코0=Gènova
+PROVINCE102CATALAN코0=Niça
+PROVINCE103CATALAN코0=Torí
+PROVINCE104CATALAN코0=Milà
+PROVINCE106CATALAN코0=Mòdena
+PROVINCE109CATALAN코0=Màntua
+PROVINCE111CATALAN코0=Friül
+PROVINCE112CATALAN코0=Venècia
+PROVINCE116CATALAN코0=Florença
+PROVINCE120CATALAN코0=Abruços
+PROVINCE121CATALAN코0=Nàpols
+PROVINCE123CATALAN코0=Calàbria
+PROVINCE127CATALAN코0=Sàsser
+PROVINCE132CATALAN코0=Estíria
+PROVINCE142CATALAN코0=Corfú
+PROVINCE160CATALAN코0=Oltènia
+PROVINCE169CATALAN코0=Armòrica
+PROVINCE183CATALAN코0=París
+PROVINCE184CATALAN코0=Orleanès
+PROVINCE185CATALAN코0=Llemosí
+PROVINCE190CATALAN코0=Borbonès
+PROVINCE191CATALAN코0=Nivernès
+PROVINCE192CATALAN코0=Dijonès
+PROVINCE199CATALAN코0=Alvèrnia
+PROVINCE202CATALAN코0=Avinyó
+PROVINCE203CATALAN코0=Lionès
+PROVINCE205CATALAN코0=Chambèri
+PROVINCE247CATALAN코0=Cúmbria
+PROVINCE257CATALAN코0=Varsòvia
+PROVINCE262CATALAN코0=Cracòvia
+PROVINCE269CATALAN코0=Podlàquia
+PROVINCE279CATALAN코0=Volínia
+PROVINCE368CATALAN코0=Òrcades
+PROVINCE373CATALAN코0=Dublín
+PROVINCE1247CATALAN코0=Còrsega
+PROVINCE1744CATALAN코0=Antuèrpia
+PROVINCE1760CATALAN코0=Coblença
+PROVINCE1764CATALAN코0=Burgàs
+PROVINCE1767CATALAN코0=Eslavònia
+PROVINCE1934CATALAN코0=Lucània
+PROVINCE1979CATALAN코0=Fèroe
+PROVINCE1851CATALAN코0=Coïmbra
+PROVINCE1878CATALAN코0=Aquisgrà
+PROVINCE2750CATALAN코0=Plòvdiv
+PROVINCE2975CATALAN코0=Clèveris
+PROVINCE2986CATALAN코0=Càller
+PROVINCE4112CATALAN코0=Carcí
+PROVINCE4391CATALAN코0=Vivarès
+PROVINCE4528CATALAN코0=Cuiàvia
+PROVINCE4696CATALAN코0=Toló
+PROVINCE4727CATALAN코0=Saluça
+PROVINCE4729CATALAN코0=Pàdua
+PROVINCE4736CATALAN코0=Tràpani
+PROVINCE4739CATALAN코0=Bèrgam
+PROVINCE1986CATALAN코0=Nova Caledònia
+PROVINCE4379IRISH코0=Uí Failghe
+PROVINCE4365IRISH코0=Oileán Mhanann
+PROVINCE239IRISH코0=Cúntóir
+PROVINCE4374IRISH코0=Tiomnaíonn
+PROVINCE235IRISH코0=Cloch Tíre
+PROVINCE238IRISH코0=Ó Dheas
+PROVINCE4370IRISH코0=Éagobhsaí
+PROVINCE1861IRISH코0=Pháirc An Cheobhráin
+CANNOT_MIGRATE_COOLDOWN코0=Cannot migrate again until $DATE|Y$
+cb_force_tributary_mission코0=Force Tributary State
+cb_force_tributary_mission_desc코0=We will force them to become a Tributary State.
+take_capital_force_tributary코0=Take the capital
+take_capital_force_tributary_desc코0=War goal is to take the capital.
+SUBJECT_EFFECTS_TOOLTIP코0=And the following effects on the $SUBJECTTYPE|Y$:
+MAPMODE_GREAT_PROJECTS코0=Great Projects
+MAPMODE_GREAT_PROJECTS_DESC코0=Displays where Great Projects are located. The brighter green, the more splendid the Great Project(s) at that location.
+MAPMODE_GREAT_PROJECTS_TT코0=$PROVINCE|Y$ has the following Great Projects:
+MAPMODE_GREAT_PROJECTS_TT_ENTRY코0=$GREATPROJECT|Y$: $TIERDESC$
+MAPMODE_GREAT_PROJECTS_TT_NONE코0=$PROVINCE|Y$ doesn't have any Great Projects.
+GREAT_PROJECT_DESTROYED코0=Destroyed in $DATE$
+MAY_DRILL코0=Can Drill Armies
+MAY_DRILL_SHORT코0=Can Drill
+EStopMissionReason_TechDoesntAllowIt코0=You do not have the required Technology.
+COASTAL_SEA_DESC코0=This is a coast, Galleys will be slightly more effective here, doing 50% more damage in combat against other non-Galleys.
+MAPMODE_RELIGIOUS_LEAGUES코0=Religious Leagues
+MAPMODE_RELIGIOUS_LEAGUES_DESC코0=Displays which countries belong to which Religious League. Green countries belong to the HRE Religious league, and Blue countries belong to the Heretic league.
+LEAGUE_MEMBER_DESC코0=$COUNTRY|Y$ is in the HRE Religious League
+federation_cohesion_maxed_out_instant코0=§YFederation Cohesion has reached maximum value.§!
+federation_cohesion_maxed_out_delayed코0=Click to view your Federation and any possible advancements that can be made.
+PEACEOFFER_TRADING_CITIES_CANNOT_TAKE_PROVINCES코0=Trading Cities cannot take Provinces.
+PEACEOFFER_TRADING_CITIES_CANNOT_HAVE_SUBJECTS코0=Trading Cities cannot have Subjects.
+FREE_POLICY_EXPLANATION코0=This policy will be available for no cost.
+TUT_ADV_CHAPTER01_PAGE04a_TITLE코0=Corruption
+TUT_ADV_CHAPTER01_PAGE04a_TEXT코0=Corruption represents the level of corruption in your nation. Corruption is connected to §MUnrest§!, §MSpy Network Construction§!, §MPower Costs§! and more.\n\nCorruption increases over time due to §Munbalanced research§!, §MOverextension§! and lack of §MReligious Unity§!. It can be decreased by high §MStability§! and being ahead of time in §MAdministrative§! or §MDiplomatic§! technology..\n
+TUT_ADV_CHAPTER01_PAGE04a_OBJECTIVES코0=Click §MNext§! to continue.
+PERPETUAL_DIET_LOCATION코0=Perpetual Diet Location
+MODIFIER_YEARLY_DOOM_REDUCTION코0=Yearly Doom Reduction
+REFUSED_REGENCY코0=Refused the Regency
+REFUSED_PRIVILEGE코0=Denied a Privilege
+REGENCY_SLUR코0=Slurred by current Regency
+native_seasonal_travel_reform_warning코0=§RAll settled provinces except the capital will revert to being Tribal Land and your capital will then be allowed to migrate.§!
