--- a/en/triggers_and_effects_l_english.properties
+++ b/en/triggers_and_effects_l_english.properties
@@ -225,8 +225,8 @@ ADD_IDEA_GROUP_EFFECT코0=Add $IDEAGROUP|Y$ idea group
 REMOVE_IDEA_GROUP_EFFECT코0=Remove $IDEAGROUP|Y$ idea group
 ADD_IDEA_EFFECT코0=Add $IDEA|Y$ idea
 REMOVE_IDEA_EFFECT코0=Remove $IDEA|Y$ idea
-HRE_INHERITABLE_ENABLED코0=HRE is now always inherited by the same country.\n
-HRE_INHERITABLE_DISABLED코0=HRE is now open to election!\n
+HRE_INHERITABLE_ENABLED코1=HRE is now always inherited by the same country.\nSubject princes no longer occupy Emperor's diplomatic relations slots\n
+HRE_INHERITABLE_DISABLED코1=HRE is now open to election!\nEmperor's subject princes will use diplomatic relations slots\n
 HAS_IDEAGROUP_TRIGGER코0=§Y$COUNTRY$§W has enabled §Y$GROUP$§W.\n
 HAS_NOT_IDEAGROUP_TRIGGER코0=§Y$COUNTRY$§W has not enabled §Y$GROUP$§W\n
 HAS_MAXIDEAGROUP_TRIGGER코0=§Y$COUNTRY$§W has completed §Y$GROUP$§W\n
