--- a/en/powers_and_ideas_l_english.properties
+++ b/en/powers_and_ideas_l_english.properties
@@ -1990,7 +1990,7 @@ swan_feathers_mantle_desc코0=The Swan Feather Mantle is a mark of great prestig
 spartans_of_miss코0=Spartans of the Lower Mississippi
 spartans_of_miss_desc코0=Travelers in our lands tell us of an ancient realm who valued military prowess above all other mark of status, as we do. We must strive so that in the future, our name is likewise remembered!
 unconqured_and_unconquerable코0=Unconquered and Unconquerable
-unconqured_and_unconquerable_desc코0=We must never surrender our land, regardless of how many efforts others make to claim them.
+unconqured_and_unconquerable_desc코1=Our Elders can no longer fight, but we can benefit from their experience as they were never defeated.
 lessons_of_ackia코0=Lessons of Ackia
 lessons_of_ackia_desc코0=In our traditional homeland, the fortified city of Ackia guards the paths leading to our other settlements. We should always strive to remember this, and to install powerful fortified cities where they can deny enemies access to our homeland. 
 tolerance_idea코0=Tolerance
@@ -2743,7 +2743,7 @@ cya_idea_3_desc코0=Our cities and fortresses lie atop immense mountains, well p
 cya_idea_4코0=Women Diplomacy
 cya_idea_4_desc코0=It may be wise, at times, to entrust delicate diplomatic missions not to warriors or kings, but to the women of our people who are more likely to win the ear of enemy sovereigns.
 cya_idea_5코0=Chachapoyan Endurance
-cya_idea_5_desc코0=Even if others should occupy us, we refuse to bow down to them. Should they demand our surrender and warn us, we must slay them. Should we be conquered, we must never accept it, and always rebel.
+cya_idea_5_desc코1=Even when our men can no longer fight and our women can no longer be used for diplomacy, they both still continue to serve our people with their experience.
 cya_idea_6코0=Purunmachus
 cya_idea_6_desc코0=To honor our dead, we should build them great sarcophagi of clay, in remote mountains and on great cliffs, where they will be laid to rest.
 cya_idea_7코0=Cloud Forests
@@ -3569,7 +3569,7 @@ bti_builders_and_artists_desc코0=Our Christian and Muslim neighbors have declar
 bti_gideon_dynasty코0=Gideon Dynasty
 bti_gideon_dynasty_desc코0=Ours is a holy dynasty of kings and privileged descendants of Zadok, once high priest during the reign of King David and King Solomon. Zadok's descendants have been ruling the Kingdom of Semien and the people of Beta Israel for centuries, while bravely fighting anyone wishing to destroy us. Our right to this land is undisputable.
 bti_lost_tribe코0=Lost Tribe of Beta Israel
-bti_lost_tribe_desc코0=Jews are living in small communities across the entire world, serving as artisans, advisors, bankers, merchants, scholars and mercenaries; they need to know there is one place in the world where they can be truly free and safe. Let us encourage Jews from all neighboring regions to settle in our country.
+bti_lost_tribe_desc코1=Jews are living in small communities across the entire world, serving as artisans, advisors, bankers, merchants, scholars and mercenaries; they need to know there is one place in the world where they can be truly free and safe. Let us encourage Jews from all neighboring regions to settle in our country and serve us instead.
 bti_haskalah코0=Haskalah
 bti_haskalah_desc코0=The Enlightenment is changing the courts of Europe forever and Jewish intellectuals have been playing an important part in this process. Let us integrate the Jewish Enlightenment in our society and reap the benefits of secularization, studies of the Hebrew language and Jewish history.
 LNA_ideas코0=Lan Na Ideas
