--- a/en/text_l_english.properties
+++ b/en/text_l_english.properties
@@ -7466,7 +7466,7 @@ the_last_joust코0=The Last Jousting Tournament
 desc_the_last_joust코0=While knights may still remain a part of our army for some time, the chivalrous traditions that they upheld for so long are dying out.
 NOCLAIMLESSER코0=You cannot claim thrones as the lesser partner in a Personal Union.
 florentine_school코0=Supporting The Florentine School
-desc_florentine_school코0=The Florentine school was an Italian school of art, most famous perhaps for its naturalistic style and its murals, that grew out of the work of artists like Donatello, Michelangelo and Brunelleschi. $COUNTRY$ supports these artists, and the world knows it.
+desc_florentine_school코1=The Florentine school was an Italian school of art, most famous perhaps for its naturalistic style and its murals, that grew out of the work of artists like Donatello, Michelangelo and Brunelleschi. [Root.GetName] supports these artists, and the world knows it.
 support_florentine_school_title코0=Support The Florentine School
 support_florentine_school_desc코0=Because of our relative notability, we are in a position to support the Italian artists in the Florentine School. Being perceived as patrons of international art will definitely help our propaganda efforts.
 court_byzantine_refugees_title코0=Byzantine Refugees
